compiler/testData/diagnostics/testsWithJsStdLib/native/nested/nativeNestedClassProhibited.kt
class A {
    <!NATIVE_INNER_CLASS_PROHIBITED!>@native inner class B<!>
}
